@startuml
'https://plantuml.com/class-diagram

class ToDo{
    + start (stage : Stage) : void
    + main (args : String[]) : void
}

class ToDoController{
    + choiceBoxData : ComboBox<String>
    - choiceBoxColumn : TableColumn<Task, String>
    - dueDateColumn : TableColumn<Task, LocalDate>
    - taskDescriptionColumn : TableColumn<Task, String>
    - taskColumn : TableColumn<Task, String>
    - tableView : TableView<Task>
    - root : Parent
    - scene : Scene
    - stage : Stage
    + datePickerField : DatePicker
    + textFieldDescription : TextField
    + textFieldTask : TextField
    + pane : Pane
    --
    - call (cellData : CellDataFeatures<Task, LocalDate>) : ObjectProperty
    + switchToToDoScene (event : ActionEvent) : void
    + switchToAllListScene (event : ActionEvent) : void
    + switchToSettings (event : ActionEvent) : void
    + switchToAbout (event : ActionEvent) : void
    + getPeople () : ObservableList<Task>
    + initialize (url : URL, rb : ResourceBundle) : void
    + buttonAdd (actionEvent : ActionEvent) : void
}

javafx.Application <|-- ToDo

ToDo -- ToDoController
@enduml